log/build_2021-10-22_03-06-43/ar_package/stderr.log
  File "/home/sg_user/SG/ros2_test_python/install/ar_package/lib/python3.8/site-packages/ar_package/ar_node.py", line 10
    def onTick(self):
    ^
SyntaxError: invalid character in identifier

